--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -49,7 +49,7 @@ frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, g
 
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
-pallet-kitties = { version = "4.0.0-dev", default-features = false, path = "../pallets/kitties" }
+# pallet-kitties = { version = "4.0.0-dev", default-features = false, path = "../pallets/kitties" }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
