--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 members = [
     "node",
     "pallets/template",
+    # "pallets/kitties",
+    "pallets/blogchain",
     "runtime",
 ]
 [profile.release]
