--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
     "node",
     "pallets/template",
-    # "pallets/kitties",
+    "pallets/kitties",
     "pallets/blogchain",
     "runtime",
 ]
