--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [workspace]
 members = [
     "node",
-    "pallets/template",
-    "pallets/kitties",
-    "pallets/blogchain",
+    # "pallets/template",
+    # "pallets/kitties",
+    # "pallets/blogchain",
+    "pallets/tictactoe",
     "runtime",
 ]
 [profile.release]
