--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -24,6 +24,7 @@ frame-system = { version = "4.0.0-dev", default-features = false, git = "https:/
 sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
 bstringify="0.1.2"
 sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
+sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
 
 
 [dev-dependencies]
