--- a/pallets/acala/dex/Cargo.toml
+++ b/pallets/acala/dex/Cargo.toml
@@ -23,6 +23,8 @@ frame-system = { version = "4.0.0-dev", default-features = false, git = "https:/
 primitives = {package = "acala-primitives", path="../../../primitives", default-features = false }
 module-traits = {path="../modules/traits", default-features=false}
 module-support = {package="module-support", path="../modules/support", default-features=false}
+sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
+
 
 [dev-dependencies]
 sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
